--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,7 @@ img {
 }
 
 .main-section {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img17.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background-desktop1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
