--- a/css/main.css
+++ b/css/main.css
@@ -64,10 +64,28 @@ img {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .header {
@@ -210,20 +228,27 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .main-section {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .button {
   font-weight: 700;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.87;
-  width: 200px;
-  height: 50px;
+  width: 160px;
+  height: 40px;
   background-color: var(--accent-color);
   color: var(--first-button-color);
-  padding: 10px 32px;
+  padding: 8px 32px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
@@ -236,18 +261,42 @@ img {
   background-color: var(--second-accent-color);
 }
 
+@media screen and (min-width: 480px) {
+  .button {
+    font-size: 16px;
+    width: 200px;
+    height: 50px;
+    padding: 8px 32px;
+  }
+}
+
 .main-title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 20px;
+  line-height: 1.61;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
   color: var(--second-title-color);
   margin-bottom: 30px;
-  width: 696px;
+  width: 310px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .main-title {
+    font-size: 26px;
+    width: 360px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-title {
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+  }
 }
 
 .features {
