--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -7,20 +7,25 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .button {
   font-weight: 700;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.87;
-  width: 200px;
-  height: 50px;
+  width: 160px;
+  height: 40px;
   background-color: var(--accent-color);
   color: var(--first-button-color);
-  padding: 10px 32px;
+  padding: 8px 32px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
@@ -31,18 +36,36 @@
   &:focus {
     background-color: var(--second-accent-color);
   }
+
+  @media screen and (min-width: 480px) {
+    font-size: 16px;
+    width: 200px;
+    height: 50px;
+    padding: 8px 32px;
+  }
 }
 
 .main-title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 20px;
+  line-height: 1.61;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
   color: var(--second-title-color);
   margin-bottom: 30px;
-  width: 696px;
+  width: 310px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (min-width: 480px) {
+    font-size: 26px;
+    width: 360px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+  }
 }
