--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,7 @@ img {
   text-align: center;
   color: var(--second-title-color);
   margin-bottom: 30px;
-  width: 310px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
