--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -54,7 +54,7 @@
   text-align: center;
   color: var(--second-title-color);
   margin-bottom: 30px;
-  width: 310px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 
