--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,30 +1,57 @@
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+  color: var(--main-title-color);
+  margin-bottom: 30px;
 
-  margin-bottom: 50px;
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 }
 
 .emblem {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  margin-left: -30px;
+  margin-bottom: -30px;
 }
 
 .emblem__item {
-  width: 170px;
   height: 92px;
-}
-.emblem__item + .emblem__item {
+  flex-basis: calc(100% / 2 - 30px);
   margin-left: 30px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc(100% / 6 - 30px);
+      margin-left: 30px;
+      margin-bottom: 30px;
+    }
+  }
 }
+// .emblem__item + .emblem__item {
+//   margin-left: 30px;
+// }
 
 .emblem__link {
   width: 100%;
