--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,45 +1,50 @@
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
-.tagline {
-  display: flex;
+.features__list {
+  margin-bottom: -30px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
 
-.icons__list {
-  display: flex;
-}
-
-.icons__link {
+.features__icon {
   width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.icons__item {
-  width: 270px;
   height: 120px;
   background-color: #f5f4fa;
   border-color: transparent;
   border-radius: 4px;
-}
-
-.icons__item + .icons__item {
-  margin-left: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 30px;
 }
 
-.tagline__item {
-  width: 270px;
-  &:not(:last-child) {
-    margin-right: 30px;
+.features__item {
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+    margin-left: 30px;
   }
 }
 
-.tagline__title {
+.features__title {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -47,9 +52,14 @@
   text-transform: uppercase;
   color: var(--main-title-color);
   margin-bottom: 10px;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    text-align: start;
+  }
 }
 
-.tagline__text {
+.features__text {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
