--- a/css/main.css
+++ b/css/main.css
@@ -653,16 +653,22 @@ img {
   padding-bottom: 60px;
 }
 
+@media screen and (max-width: 1199px) {
+  .adress-block {
+    margin-bottom: 60px;
+  }
+}
+
 .logo__footer {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--third-logo-text-color);
   display: block;
   margin-bottom: 20px;
-  outline: none;
+  margin-right: 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -670,16 +676,34 @@ img {
   color: var(--accent-color);
 }
 
+@media screen and (max-width: 1199px) {
+  .logo__footer {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo__footer {
+    font-size: 26px;
+  }
+}
+
 .logo--static {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--first-logo-text-color);
 }
 
-.footer__contacts {
+@media screen and (min-width: 1200px) {
+  .logo--static {
+    font-size: 26px;
+  }
+}
+
+.footer-contacts {
   display: block;
 }
 
@@ -687,28 +711,50 @@ img {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 1.717;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--footer-text-color);
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+  text-align: center;
 }
 
-.contacts-link--color {
+@media screen and (min-width: 1200px) {
+  .footer__address {
+    margin-bottom: 9px;
+  }
+}
+
+.footer-contacts__link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  outline: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-link--color:hover, .contacts-link--color:focus {
+.footer-contacts__link:hover, .footer-contacts__link:focus {
   color: var(--accent-color);
 }
 
-.contacts__item--noflex:not(:last-child) {
-  margin-bottom: 9px;
+.footer-contacts__item {
+  margin-right: 0;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-contacts__item {
+    text-align: center;
+  }
+}
+
+.footer-contacts__item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-contacts__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .join-block__action {
@@ -722,13 +768,33 @@ img {
   margin-bottom: 20px;
 }
 
-.footer__container {
-  display: flex;
-  align-items: start;
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: baseline;
+  }
 }
 
-.join-block {
-  margin-left: 70px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__container {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .join-block {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .join-block {
+    margin-left: 70px;
+  }
 }
 
 .sotial--grey {
@@ -768,8 +834,10 @@ img {
   fill: #ffffff;
 }
 
-.subscribe {
-  margin-left: auto;
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    margin-left: auto;
+  }
 }
 
 .subscribe__action {
@@ -783,16 +851,15 @@ img {
   margin-bottom: 20px;
 }
 
-.subscribe__from {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media screen and (max-width: 1199px) {
+  .subscribe__action {
+    text-align: center;
+  }
 }
 
 .subscribe__input {
-  width: 358px;
   height: 50px;
-  margin-right: 12px;
+  margin-bottom: 20px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -811,6 +878,35 @@ img {
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+@media screen and (max-width: 767px) {
+  .subscribe__input {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .subscribe__input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe__input {
+    margin-right: 12px;
+    width: 358px;
+  }
+}
+
+.button__footer {
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 1199px) {
+  .button__footer {
+    display: block;
+  }
 }
 
 .button__text {
