--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,33 +4,52 @@
   padding-bottom: 60px;
 }
 
+.adress-block {
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
+}
+
 .logo__footer {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--third-logo-text-color);
   display: block;
   margin-bottom: 20px;
-  outline: none;
+  margin-right: 0;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     color: var(--accent-color);
+  }
+
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
   }
 }
 
 .logo--static {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--first-logo-text-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+  }
 }
 
-.footer__contacts {
+.footer-contacts {
   display: block;
 }
 
@@ -38,19 +57,24 @@
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 1.717;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--footer-text-color);
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 9px;
+  }
 }
 
-.contacts-link--color {
+.footer-contacts__link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  outline: none;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
@@ -58,9 +82,20 @@
   }
 }
 
-.contacts__item--noflex {
+.footer-contacts__item {
+  margin-right: 0;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
+}
+
+.footer-contacts__item {
   &:not(:last-child) {
-    margin-bottom: 9px;
+    margin-bottom: 8px;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 9px;
+    }
   }
 }
 
@@ -76,12 +111,28 @@
 }
 
 .footer__container {
-  display: flex;
-  align-items: start;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: baseline;
+
+    @media screen and (max-width: 1199px) {
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+  }
 }
 
 .join-block {
-  margin-left: 70px;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 70px;
+  }
 }
 
 .sotial--grey {
@@ -122,7 +173,9 @@
 }
 
 .subscribe {
-  margin-left: auto;
+  @media screen and (min-width: 1200px) {
+    margin-left: auto;
+  }
 }
 
 .subscribe__action {
@@ -134,18 +187,15 @@
   text-transform: uppercase;
   color: var(--footer-text-color);
   margin-bottom: 20px;
-}
 
-.subscribe__from {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
 }
 
 .subscribe__input {
-  width: 358px;
   height: 50px;
-  margin-right: 12px;
+  margin-bottom: 20px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -163,6 +213,27 @@
     line-height: 1.25;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+  }
+
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 12px;
+    width: 358px;
+  }
+}
+
+.button__footer {
+  margin: 0 auto;
+
+  @media screen and (max-width: 1199px) {
+    display: block;
   }
 }
 
