--- a/sass/layout/_portfolio-hero.scss
+++ b/sass/layout/_portfolio-hero.scss
@@ -1,6 +1,11 @@
 .hero {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .filter__button {
@@ -47,31 +52,64 @@
 
 .filter {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .filter__link:not(:last-child) {
   margin-right: 8px;
+
+  @media screen and (max-width: 411px) {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 412px) and (max-width: 767px) {
+  .filter__link:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
 }
 
 .card-set {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-bottom: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-bottom: -30px;
+  }
 }
 
-.card-set__item {
-  flex-basis: calc(100% / 9 - 30px);
-  margin-left: 30px;
+.card-set__item:not(:last-child) {
   margin-bottom: 30px;
+}
+.card-set__item {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
   }
 }
 
