адаптив модального окна

--- a/css/main.css
+++ b/css/main.css
@@ -1127,8 +1127,8 @@ img {
 .modal {
   padding: 40px;
   position: absolute;
-  width: 528px;
-  min-height: 581px;
+  width: 90%;
+  min-height: 609px;
   background-color: #ffffff;
   border-radius: 4px;
   top: 50%;
@@ -1136,6 +1136,19 @@ img {
   transform: translate(-50%, -50%);
   transition: transform 1000ms;
   transform: rotate(50);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal__close {
@@ -1272,13 +1285,25 @@ img {
 
 .modal__policy {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 6px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (min-width: 480px) {
+  .modal__policy {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__policy {
+    font-size: 14px;
+  }
 }
 
 .modal__check {
