--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -18,8 +18,8 @@
 .modal {
   padding: 40px;
   position: absolute;
-  width: 528px;
-  min-height: 581px;
+  width: 90%;
+  min-height: 609px;
   background-color: #ffffff;
   border-radius: 4px;
   top: 50%;
@@ -27,6 +27,15 @@
   transform: translate(-50%, -50%);
   transition: transform 1000ms;
   transform: rotate(50);
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal__close {
