--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,26 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
+.open-menu {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 40px;
+  height: 40px;
+  padding-top: 5px;
+  display: block;
+  background-color: transparent;
+  border-color: transparent;
+  cursor: pointer;
+}
+
+.menu {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu:hover, .menu:focus {
+  fill: var(--accent-color);
+}
+
 .logo {
   font-family: Raleway;
   font-weight: 700;
@@ -161,7 +181,7 @@ img {
   color: var(--header-address-color);
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -195,7 +215,7 @@ img {
 .navigation__menu {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  display: none;
 }
 
 .navigation {
