--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,6 +2,26 @@
   border-bottom: 1px solid #ececec;
 }
 
+.open-menu {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 40px;
+  height: 40px;
+  padding-top: 5px;
+  display: block;
+  background-color: transparent;
+  border-color: transparent;
+  cursor: pointer;
+}
+
+.menu {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
+}
+
 .logo {
   font-family: Raleway;
   font-weight: 700;
@@ -70,7 +90,7 @@
   color: var(--header-address-color);
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -103,7 +123,7 @@
 .navigation__menu {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  display: none;
 }
 
 .navigation {
