--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
-.open-menu {
+.open-menu-btn {
   margin-top: 10px;
   margin-bottom: 10px;
   width: 40px;
@@ -102,14 +102,34 @@ img {
   background-color: transparent;
   border-color: transparent;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu {
+.open-menu-btn:hover, .open-menu-btn:focus {
+  background-color: transparent;
+}
+
+.open-menu-btn__icon {
+  fill: c #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu:hover, .menu:focus {
+.open-menu:hover .open-menu-btn__icon,
+.open-menu:focus .open-menu-btn__icon {
   fill: var(--accent-color);
+}
+
+.mob-menu {
+  position: fixed;
+  top: 0;
+  width: 100vh;
+  height: 100vh;
+  background-color: #ffffff;
+  z-index: 5;
+}
+
+.close-menu-btn {
+  display: block;
 }
 
 .logo {
@@ -674,7 +694,6 @@ img {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: #afb1b8;
-  outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
