--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
   border-bottom: 1px solid #ececec;
 }
 
-.open-menu {
+.open-menu-btn {
   margin-top: 10px;
   margin-bottom: 10px;
   width: 40px;
@@ -12,14 +12,33 @@
   background-color: transparent;
   border-color: transparent;
   cursor: pointer;
-}
-
-.menu {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
+    background-color: transparent;
+  }
+}
+
+.open-menu-btn__icon {
+  fill: c#000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .open-menu:hover &,
+  .open-menu:focus & {
     fill: var(--accent-color);
   }
+}
+
+.mob-menu {
+  position: fixed;
+  top: 0;
+  width: 100vh;
+  height: 100vh;
+  background-color: #ffffff;
+  z-index: 5;
+}
+
+.close-menu-btn {
+  display: block;
 }
 
 .logo {
