--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,7 @@ img {
 .open-menu-btn {
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: auto;
   width: 40px;
   height: 40px;
   padding-top: 5px;
@@ -107,6 +108,12 @@ img {
 
 .open-menu-btn:hover, .open-menu-btn:focus {
   background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .open-menu-btn {
+    display: none;
+  }
 }
 
 .open-menu-btn__icon {
@@ -122,14 +129,123 @@ img {
 .mob-menu {
   position: fixed;
   top: 0;
-  width: 100vh;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #ffffff;
   z-index: 5;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.mob-menu .container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .mob-menu {
+    display: none;
+  }
+}
+
+.mob-menu__container {
+  padding-left: 33px;
 }
 
 .close-menu-btn {
-  display: block;
+  width: 40px;
+  height: 40px;
+  padding-top: 6px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  border-color: transparent;
+  background-color: transparent;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-menu-btn:hover, .close-menu-btn:focus {
+  fill: var(--accent-color);
+  cursor: pointer;
+}
+
+.mob-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--main-title-color);
+}
+
+.mob-menu__link--current {
+  color: var(--accent-color);
+}
+
+.mob-menu-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu-contacts {
+  margin-bottom: 64px;
+}
+
+.mob-menu-tel__link {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 480px) {
+  .mob-menu-tel__link {
+    font-size: 34px;
+  }
+}
+
+.mob-menu-mail__link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--header-address-color);
+}
+
+.mob-menu-social {
+  display: flex;
+}
+
+.mob-menu-social__link {
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 480px) {
+  .mob-menu-social__link {
+    font-size: 18px;
+  }
+}
+
+.devider {
+  color: rgba(33, 33, 33, 0.2);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+@media screen and (min-width: 480px) {
+  .devider {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 
 .logo {
@@ -169,7 +285,6 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
   display: block;
-  outline: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -193,6 +308,12 @@ img {
   margin-right: 50px;
 }
 
+@media screen and (max-width: 767px) {
+  .navigation__link {
+    display: none;
+  }
+}
+
 .contacts__link {
   font-weight: 500;
   font-size: 14px;
@@ -201,17 +322,21 @@ img {
   color: var(--header-address-color);
   display: -webkit-box;
   display: -ms-flexbox;
-  display: none;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  outline: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts__link:hover, .contacts__link:focus {
   color: var(--accent-color);
+}
+
+@media screen and (max-width: 767px) {
+  .contacts__link {
+    display: none;
+  }
 }
 
 .contacts__icon {
@@ -235,7 +360,12 @@ img {
 .navigation__menu {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .navigation__menu {
+    display: none;
+  }
 }
 
 .navigation {
@@ -250,8 +380,13 @@ img {
 .contacts {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
+}
+
+@media screen and (max-width: 767px) {
+  .contacts {
+    display: none;
+  }
 }
 
 .header__container {
@@ -1202,7 +1337,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  outline: none;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
