--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,6 +5,7 @@
 .open-menu-btn {
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: auto;
   width: 40px;
   height: 40px;
   padding-top: 5px;
@@ -16,6 +17,10 @@
   &:hover,
   &:focus {
     background-color: transparent;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: none;
   }
 }
 
@@ -31,14 +36,112 @@
 .mob-menu {
   position: fixed;
   top: 0;
-  width: 100vh;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #ffffff;
   z-index: 5;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  .container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.mob-menu__container {
+  padding-left: 33px;
 }
 
 .close-menu-btn {
-  display: block;
+  width: 40px;
+  height: 40px;
+  padding-top: 6px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  border-color: transparent;
+  background-color: transparent;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+    cursor: pointer;
+  }
+}
+
+.mob-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--main-title-color);
+}
+
+.mob-menu__link--current {
+  color: var(--accent-color);
+}
+
+.mob-menu-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu-contacts {
+  margin-bottom: 64px;
+}
+
+.mob-menu-tel__link {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+
+  @media screen and (min-width: 480px) {
+    font-size: 34px;
+  }
+}
+
+.mob-menu-mail__link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--header-address-color);
+}
+
+.mob-menu-social {
+  display: flex;
+}
+
+.mob-menu-social__link {
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  @media screen and (min-width: 480px) {
+    font-size: 18px;
+  }
+}
+.devider {
+  color: rgba(33, 33, 33, 0.2);
+  margin-left: 5px;
+  margin-right: 5px;
+  @media screen and (min-width: 480px) {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 
 .logo {
@@ -78,7 +181,6 @@
   padding-top: 32px;
   padding-bottom: 32px;
   display: block;
-  outline: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &.navigation__link--current::after {
@@ -101,6 +203,12 @@
   margin-right: 50px;
 }
 
+.navigation__link {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
+
 .contacts__link {
   font-weight: 500;
   font-size: 14px;
@@ -109,16 +217,20 @@
   color: var(--header-address-color);
   display: -webkit-box;
   display: -ms-flexbox;
-  display: none;
+
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  outline: none;
+
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     color: var(--accent-color);
+  }
+
+  @media screen and (max-width: 767px) {
+    display: none;
   }
 }
 
@@ -142,7 +254,9 @@
 .navigation__menu {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: none;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .navigation {
@@ -157,8 +271,11 @@
 .contacts {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+
   margin-left: auto;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .header__container {
